[package]
name = "termris"
version = "0.1.2" # change with html_root_url in main.rs
edition = "2021"
authors = ["nomissbowling <nomissbowling@yahoo.co.jp>"]

description = "terminal tetris for Rust"
keywords = ["stdout", "stdin", "crossterm", "console"]
categories = ["development-tools", "game-development", "command-line-utilities", "command-line-interface"]
license = "MIT"

documentation = "https://docs.rs/termris/"
homepage = "https://crates.io/crates/termris"
repository = "https://github.com/nomissbowling/termris"

readme = "README.md"

[dependencies]
prayterm = { version = "1.0" }

crossterm = { version = "0.27.0" }

# crossterm = { version = "0.27.0", features = ["event-stream"] }
# crossbeam-channel = "0.5.12"
